# recsys-2022-evaluation-of-recsys-with-impressions

./: CITATION.cff  README.md
RecSysFramework_public/: README.md  build.py  pyproject.toml  requirements.txt  run_compile_all_cython.py  run_hyperparameter_optimization.py  run_hyperparameter_optimization_parallel_dataset.py  run_hyperparameter_optimization_parallel_model.py  run_print_dataset_stats.py  run_test_datasets.py  run_test_recommenders.py
RecSysFramework_public/Data_manager/: DataPostprocessing.py  DataPostprocessing_Anonymize.py  DataPostprocessing_Implicit_URM.py  DataPostprocessing_K_Cores.py  DataPostprocessing_User_min_interactions.py  DataPostprocessing_User_sample.py  DataReader.py  DataReader_utils.py  DataSplitter.py  DataSplitter_Holdout.py  DataSplitter_k_fold_random.py  DataSplitter_leave_k_out.py  Dataset.py  DatasetMapperManager.py  README.md  __init__.py  run_clean_split_data_files.py
RecSysFramework_public/Data_manager/AmazonReviewData/: AmazonAutomotiveReader.py  AmazonBooksReader.py  AmazonElectronicsReader.py  AmazonMoviesTVReader.py  AmazonMusicReader.py  AmazonMusicalInstrumentsReader.py  _AmazonReviewDataReader.py
RecSysFramework_public/Data_manager/BookCrossing/: BookCrossingReader.py
RecSysFramework_public/Data_manager/Brightkite/: BrightkiteReader.py
RecSysFramework_public/Data_manager/Ciao/: CiaoReader.py
RecSysFramework_public/Data_manager/CiteULike/: CiteULikeReader.py
RecSysFramework_public/Data_manager/ContentWiseImpressions/: ContentWiseImpressionsReader.py
RecSysFramework_public/Data_manager/DeliciousHetrec2011/: DeliciousHetrec2011Reader.py
RecSysFramework_public/Data_manager/Epinions/: EpinionsReader.py
RecSysFramework_public/Data_manager/FilmTrust/: FilmTrustReader.py
RecSysFramework_public/Evaluation/: Evaluator.py  EvaluatorCompareModels.py  metrics_compare_models.py
RecSysFramework_public/HyperparameterTuning/: SearchAbstractClass.py  SearchBayesianSkopt.py  SearchBayesianSkopt_k_fold.py  SearchSingleCase.py  run_hyperparameter_search.py
RecSysFramework_public/Recommenders/: BaseCBFRecommender.py  BaseMatrixFactorizationRecommender.py  BaseRecommender.py  BaseSimilarityMatrixRecommender.py  BaseTempFolder.py  DataIO.py  Incremental_Training_Early_Stopping.py  NonPersonalizedRecommender.py  PredefinedListRecommender.py  Recommender_import_list.py
RecSysFramework_public/Test/: DataReader_utils_test.py  IncrementalSparseMatrix_test.py  KFoldResultRepository_Test.py  Recommender_utils_Test.py  metrics_Test.py
RecSysFramework_public/Utils/: RecommenderFactory.py  RecommenderInstanceIterator.py  ResultFolderLoader.py  Test_BaseRecommender.py  plot_popularity.py
(+83 files in other folders)
