[logs]
dir_name = "logs"
file_name = "RecSysFramework_public.log"
formatter = "%(process)d|%(asctime)s|%(levelname)s|%(module)s|%(funcName)s|%(lineno)d|%(message)s"

[tool.mypy]
python_version = "~3.9"
ignore_missing_imports = true

[tool.poetry]
name = "recsys-framework-public"
version = "1.0.0"
description = ""
authors = [
    "Anonymous",
]
packages = [
    { include = "CythonCompiler" }, # Include the recsys_framework folder as a package.
    { include = "Data_manager"}, # Include the recsys_framework folder as a package.
    { include = "Evaluation" }, # Include the recsys_framework folder as a package.
    { include = "HyperparameterTuning" }, # Include the recsys_framework folder as a package.
    { include = "Recommenders" }, # Include the recsys_framework folder as a package.
    { include = "Test" }, # Include the recsys_framework folder as a package.
    { include = "Utils" }, # Include the recsys_framework folder as a package.
]
include = [
    { path = "**/*.so" }, # Include compiled cython code in the wheel and tar.gz.
    { path = "**/*.pyd" }, # Include compiled cython code in the wheel and tar.gz.
]
exclude = [
    { path = "build/*" }, # Exclude compiled cython code in the wheel and tar.gz. given that we already copy it.
]

[tool.poetry.dependencies]
# IMPORTANT: numpy and Cython versions in the `build-system` MUST match the ones used in the `dependencies` section.
python = "~3.9"
Cython = "0.29.23"
numpy = "1.20.1"
pandas = "1.2.4"
scikit-learn = "0.24.1"
scikit-optimize = "0.8.1"
scipy = "1.6.2"
tqdm = "4.59.0"
lightfm = "1.16"
nltk = "3.6.1"
nose = "1.3.7"
h5py = "3.6.0"  # Framework uses 2.10.0 but it fails on mac, HDF5 files saved with DataIO might be affected.
tables = "^3.7.0"
matplotlib = "^3.5.1"
tensorflow = "^2.8.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.7b0"
pytest = "^6.2.4"
memory-profiler = "^0.58.0"

# How to include a script to build the package can be seen here: https://github.com/python-poetry/poetry/issues/11#issuecomment-379484540
# example pyproject.toml: https://github.com/sdispater/pendulum/blob/master/pyproject.toml
# example build.py (aka our build.py): https://github.com/sdispater/pendulum/blob/master/build.py
[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[build-system]
# IMPORTANT: numpy and Cython versions in the `build-system` MUST match the ones used in the `dependencies` section.
requires = ["setuptools", "numpy==1.20.1", "Cython==0.29.23", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


